# 1ai-engage

./: .env.example  .gitignore  AGENTS.md  AUDIT_SUMMARY.txt  CLAUDE.md  EMAIL_TRACKING_COMPLETE.md  PLAN_CHANNELS_V2.md  README.md  SKILL.md  START_HERE.md  agent_control.py  mcp_server.py  pyproject.toml  start_services.sh  webhook_server.py
.omo/: ARCHIVE-codebase-restructure.md  COMPLETE  COMPLETION_SUMMARY.md  FINAL-STATUS.md  boulder.json
dashboard/: AGENTS.md  next.config.ts
data/: digital_kb.json  digital_kb_complete.json  flosia_kb_complete.json  herbal_kb.json  herbal_kb_complete.json  leads.db.backup  leads.db.empty  sample_kb.txt  skincare_kb_complete.json  soft_psychology_kb.json
docs/: AGENTS.md  BREVO_WEBHOOK_SETUP.md  DOCUMENTATION_STRUCTURE.md  EMAIL_TRACKING_AUDIT_SUMMARY.md  EMAIL_TRACKING_IMPLEMENTATION.md  EMAIL_TRACKING_INDEX.md  EMAIL_TRACKING_MAP.md  PROPOSAL_MULTI_SERVICE_PIPELINE.md  README.md  SKILL.md  api_reference.md  architecture.md  data_models.md  mcp-contract.md  mcp-safety.md  runbooks.md
scripts/: AGENTS.md  ab_testing.py  audio_utils.py  autonomous_loop.py  blaster.py  brain_client.py  capi_tracker.py  closer_agent.py  config.py  conversation_cleanup.py  conversation_guard.py  conversation_tracker.py  converter.py  cs_analytics.py  cs_engine.py  cs_learn.py  cs_learn_cli.py  cs_outcomes.py  cs_playbook.py  cs_self_improve.py  email_fallback.py  enricher.py  flosia_sales_engine.py  followup.py  generator.py  guard_checker.py  health_monitor.py  kb_manager.py  lead_scorer.py  leads.py  llm_client.py  n8n_client.py  orchestrator.py  (+21 more)
(+778 files in other folders)
